Math vector stubs are not called for double64 vectors

XMLWordPrintable


      This is a follow-up of JDK-8261267.

      For Double64Vector, the svml math vector stubs intrinsification is failing and they are not being called from jitted code.
      But we do have svml double64 vectors.
      So it would be beeter to call the svml math double64 vector stubs where available.

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: