8262275: Math vector stubs are not called for double64 vectors

Reviewed-by: sviswanathan